# mkwii-distro-tool

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/bmg/: Cargo.toml
crates/bmg/src/: lib.rs  parse.rs  traits.rs
crates/config/: Cargo.toml
crates/config/src/: binary_header.rs  cup_holder.rs  info_holder.rs  lib.rs  parser.rs  slots.rs  traits.rs
crates/config/src/parser/: binary_header.rs  cup_holder.rs  info_holder.rs  text_holder.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/mkwii-distro-tool/: Cargo.toml
crates/mkwii-distro-tool/src/: main.rs  workspace.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  styles.rs
crates/ui/src/styles/: text_input.rs
