[package]
name = "mkwii-distro-tool-config"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
binrw.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
iced.workspace = true
log.workspace = true
mkwii-distro-tool-ui.workspace = true
num-traits.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
